@@ -92,7 +92,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   otherwise just "log in", consistently across skins
 * Special:Shortpages and Special:Longpages now returns pages in all content 
   namespaces, not just NS_MAIN.
-* (bug 889) Improve conflict-handling between shared upload repository (commons) and local one
+* (bug 889) Improve conflict-handling between shared upload repository
+  and local one
+* Update documentation links in auto-generated LocalSettings.php
 
 === Bug fixes in 1.13 ===
 
